--- a/BoardGameGather/src/main/resources/application.properties
+++ b/BoardGameGather/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=BoardGameGather
 spring.datasource.url=jdbc:h2:./bgg
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
