--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+app.image-storage-path=uploads/images
+app.pdf-storage-path=uploads/pdfs
+
 spring.application.name=BoardGameGather
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5434/${POSTGRES_DB}
