working bgg api

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 app.image-storage-path=./uploads/images
 app.pdf-storage-path=./uploads/pdfs
 
+app.external-token=${API_TOKEN}
+
 spring.application.name=BoardGameGather
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5434/${POSTGRES_DB}
