--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,8 @@ app.image-storage-path=./uploads/images
 app.pdf-storage-path=./uploads/pdfs
 app.boardgame.defaultPageSize=20
 app.boardgame.maxPageSize=50
+app.gameSession.defaultPageSize=20
+app.gameSession.maxPageSize=50
 
 app.external-token=${API_TOKEN}
 
