--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,13 @@
 app.image-storage-path=./uploads/images
 app.pdf-storage-path=./uploads/pdfs
 
-app.gameSession.defaultPageSize=20
-app.gameSession.maxPageSize=50
-
-app.boardgame.default-pagesize=20
-app.boardgame.max-pagesize=50
-
 app.external-url=https://boardgamegeek.com/xmlapi2/
 app.external-token=${API_TOKEN}
 
 spring.application.name=BoardGameGather
+
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.max-page-size=50
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5434/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
