--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+app.frontend-url=${FRONTEND_URL:http://localhost:5173}
+
 app.image-storage-path=./uploads/images
 app.pdf-storage-path=./uploads/pdfs
 
@@ -9,11 +11,11 @@ spring.application.name=BoardGameGather
 spring.data.web.pageable.default-page-size=20
 spring.data.web.pageable.max-page-size=50
 
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5434/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5434}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_MODE:create}
 spring.jpa.show-sql=true
 
 spring.servlet.multipart.max-file-size=10MB
